--- a/_posts/2022-1-6-soma-fm.markdown
+++ b/_posts/2022-1-6-soma-fm.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Soma FM
-categories: [music, radio, streaming]
+tags: [music, radio, streaming]
+category: media
 ---
 Streaming beats since 2000! [https://somafm.com/](https://somafm.com/)
